# bevy-multiple-characters-animation

./: Cargo.toml  README.md
assets/: Adventurer.gltf  Casual.gltf  Cleric.gltf  Formal.gltf  Medieval.gltf  Punk.gltf  SciFi Torso.glb  SciFi.gltf  Skeleton and Animations.glb  Soldier.gltf  Suit.gltf  Witch.gltf  Worker.gltf  main_skeleton.glb  modular experiment 1.glb  modular experiment 1.gltf  modular experiment 2.glb
src/: main.rs
src/animated_character/: alter_mesh_materials.rs  attach_part.rs  link_animations.rs  mod.rs  move_scene_transform.rs  paint_cubes_on_joints.rs  print_scene_tree.rs  remove_parts.rs  run_animations.rs  spawn_characters.rs  spawn_scenes.rs  update_aabb_positions.rs
src/animated_character/assemble_parts/: attach_part_to_main_skeleton.rs  find_child_with_name_containing.rs  get_main_skeleton_bones_and_armature.rs  mod.rs
src/animated_character/attach_part/: mod.rs
src/asset_loader/: mod.rs
src/camera/: mod.rs
src/level/: mod.rs
