[package]
name = "character_animation_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.9.0"
bevy_mod_billboard = "0.5.1"
