[package]
name = "character_animation_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.16.0"
bevy_mod_billboard = { git = "https://github.com/kulkalkul/bevy_mod_billboard" }
pixelate_mesh = { git = "https://github.com/janhohenheim/pixelate_mesh" }
bevy_asset_loader ="0.20"
# bevy_mod_billboard = "0.5.1"
